# fiducia-ai-agent-manager.rs

./: .cli-flags.toml  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml
.github/: README.md
.github/workflows/: README.md  ci.yml  cli-flags.yml
scripts/: README.md  with-flags2env.sh
src/: README.md  agents.rs  config.rs  control_plane.rs  event_bus.rs  git.rs  http.rs  lib.rs  main.rs  messaging.rs  nats.rs  orchestrator.rs  prompt.rs  sanitize.rs  state.rs  storage.rs  thread_ops.rs  util.rs
